# speak-tts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Formula/: speak-tts.rb
scripts/: publish.sh
speak_tts/: __init__.py  cli.py
