[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speak-tts"
version = "0.1.0"
description = "Voice cloning CLI for Mac using F5-TTS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Sinai" }
]
keywords = ["tts", "voice-cloning", "f5-tts", "mlx", "speech-synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "f5-tts-mlx",
    "soundfile",
]

[project.scripts]
speak = "speak_tts.cli:main"

[project.urls]
Homepage = "https://github.com/danielsinai/homebrew-speak-tts"
Repository = "https://github.com/danielsinai/homebrew-speak-tts"

[tool.hatch.build.targets.wheel]
packages = ["speak_tts"]

[tool.hatch.build.targets.sdist]
exclude = [
    "venv/",
    ".venv/",
    "dist/",
    "*.egg-info/",
    "__pycache__/",
    ".git/",
    "*.wav",
    "speak.py",
]

